# rust-finance

./: Cargo.toml  rustfmt.toml
src/: main.rs  scraper.rs
src/scraper/: parser.rs
