[package]
name = "rust-finance"
version = "0.1.0"
authors = ["Mark Ramotowski <mark.tint.ramotowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
